2007-08-19 Erik Hjortsberg  <erik.hjortsberg@iteam.se>

	* src/components/ogre/widgets/IngameChatWidget.cpp, src/components/ogre/widgets/IngameChatWidget.h, src/components/ogre/widgets/IngameChatWidget.xml: activate the chat text functionality
	* src/components/ogre/widgets/WidgetDefinitions.cpp: fixed namespace (all widget stuff should be in EmberOgre::Gui eventually)

2007-08-19 Erik Hjortsberg  <erik.hjortsberg@iteam.se>

	* src/components/ogre/widgets/WidgetPool.cpp, src/components/ogre/widgets/WidgetPool.h: added some missing includes

2007-08-19 Erik Hjortsberg  <erik.hjortsberg@iteam.se>

	* src/components/ogre/cegui/datafiles/schemes/EmberLookSkin.scheme: include the bold 8 point Vera font also

2007-08-18 Erik Hjortsberg  <erik.hjortsberg@iteam.se>

	* src/components/ogre/widgets/IngameChatWidget.cpp, src/components/ogre/widgets/IngameChatWidget.h, src/components/ogre/widgets/Makefile.am, src/components/ogre/widgets/WidgetPool.cpp, src/components/ogre/widgets/WidgetPool.h: refactored the widget pool functionality into its own file

2007-08-18 Erik Hjortsberg  <erik.hjortsberg@iteam.se>

	* src/components/ogre/widgets/IngameChatWidget.cpp, src/components/ogre/widgets/IngameChatWidget.h: added a simple pooling systems for creating widgets and keeping them in a pool

2007-08-18 Erik Hjortsberg  <erik.hjortsberg@iteam.se>

	* src/components/ogre/cegui/datafiles/fonts/Vera.ttf: fixed incorrect font

2007-08-18 Erik Hjortsberg  <erik.hjortsberg@iteam.se>

	* src/components/ogre/widgets/IngameChatWidget.cpp, src/components/ogre/widgets/IngameChatWidget.h, src/components/ogre/widgets/Label.layout: show labels on all "characters". For now the talk bubbles are disabled, but they'll be back.

2007-08-18 Erik Hjortsberg  <erik.hjortsberg@iteam.se>
