@@ -2,14 +2,19 @@
 <GUILayout>
 	<Window Type='DefaultGUISheet' Name='MainWindow'>
 		<Property Name='UnifiedSize' Value='{{0.00000,300.000000},{0.0000,115.000000}}'/>
-		<Property Name='Alpha' Value='0.6'/>
+		<Property Name='UnifiedPosition' Value='{{-0.25,0},{0,0}}'/>
+		<Property Name='ClippedByParent' Value='false'/>
+		<!-- Property Name='Alpha' Value='0.6'/ -->
 		<Window Type='EmberLook/StaticText' Name='Text'>
 			<Property Name='UnifiedSize' Value='{{0.400000,0.000000},{0.850000,0.000000}}'/>
 			<Property Name='UnifiedPosition' Value='{{0.000000,0.000000},{0.150000,0.000000}}'/>
 			<Property Name='InheritsAlpha' Value='true'/>
 			<Property Name='HorzFormatting' Value='WordWrapLeftAligned'/>
 			<Property Name='VertFormatting' Value='TopAligned'/>
-			<Property Name='FrameEnabled' Value='True'/>
+			<Property Name='FrameEnabled' Value='false'/>
+			<Property Name='BackgroundEnabled' Value='false'/>
+			<Property Name='Font' Value='Vera-Sans-Bold-8'/>
+			<Property Name='TextColours' Value='tl:FFFFFFFF tr:FFFFFFFF bl:FFffc990 br:FFffc990'/>
 		</Window>
 		<Window Type='DefaultGUISheet' Name='ResponseList'>
 			<Property Name='UnifiedSize' Value='{{0.400000,0.000000},{0.850000,0.000000}}'/>
